--- a/Registry/View/ScheduleView.xaml
+++ b/Registry/View/ScheduleView.xaml
@@ -1,20 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:registry="clr-namespace:Registry"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib">
+                    xmlns:system="clr-namespace:System;assembly=mscorlib"
+                    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
     <DataTemplate DataType="{x:Type registry:ScheduleViewModel}">
-        <Grid IsSharedSizeScope="True">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Расписание работы кабинетов на" Margin="5" VerticalAlignment="Center" />
-            <DatePicker Grid.Row="0" Grid.Column="1" SelectedDateFormat="Long" Width="180" SelectedDate="{Binding SelectedDate, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Margin="5" />
-            <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <xctk:BusyIndicator IsBusy="{Binding IsBusy}" BusyContent="{Binding BusyStatus}">
+            <Grid IsSharedSizeScope="True">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
@@ -23,26 +14,39 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <ScrollViewer Grid.Row="1" Grid.Column="0" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Hidden">
-                    <ListBox IsEnabled="False" ItemsSource="{Binding TimeTickers}" Width="150" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate DataType="{x:Type system:TimeSpan}">
-                                <TextBlock Text="{Binding StringFormat='hh\\:mm', Mode=OneTime}" Margin="3" FontSize="9" VerticalAlignment="Top" HorizontalAlignment="Right"/>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                        <ListBox.ItemContainerStyle>
-                            <Style TargetType="{x:Type ListBoxItem}">
-                                <Setter Property="Height" Value="{Binding DataContext.TimeTickerStep, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}, 
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="Расписание работы кабинетов на" Margin="5" VerticalAlignment="Center" />
+                <DatePicker Grid.Row="0" Grid.Column="1" SelectedDateFormat="Long" Width="180" SelectedDate="{Binding SelectedDate, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Margin="5" />
+                <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <ScrollViewer Grid.Row="1" Grid.Column="0" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Hidden">
+                        <ListBox IsEnabled="False" ItemsSource="{Binding TimeTickers}" Width="150" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate DataType="{x:Type system:TimeSpan}">
+                                    <TextBlock Text="{Binding StringFormat='hh\\:mm', Mode=OneTime}" Margin="3" FontSize="9" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                            <ListBox.ItemContainerStyle>
+                                <Style TargetType="{x:Type ListBoxItem}">
+                                    <Setter Property="Height" Value="{Binding DataContext.TimeTickerStep, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}, 
                                     Converter={x:Static registry:TimeToHeightConverter.DefaultInstance}}" />
-                                <Setter Property="Padding" Value="0" />
-                                <Setter Property="Margin" Value="0" />
-                                <Setter Property="BorderThickness" Value="0 0.5 0 0.5" />
-                                <Setter Property="BorderBrush" Value="Black"></Setter>
-                            </Style>
-                        </ListBox.ItemContainerStyle>
-                    </ListBox>
-                </ScrollViewer>
+                                    <Setter Property="Padding" Value="0" />
+                                    <Setter Property="Margin" Value="0" />
+                                    <Setter Property="BorderThickness" Value="0 0.5 0 0.5" />
+                                    <Setter Property="BorderBrush" Value="Black"></Setter>
+                                </Style>
+                            </ListBox.ItemContainerStyle>
+                        </ListBox>
+                    </ScrollViewer>
+                    <ListBox Grid.Row="1" Grid.Column="1" ItemsSource="{Binding Rooms}"></ListBox>
+                </Grid>
             </Grid>
-        </Grid>
+        </xctk:BusyIndicator>
     </DataTemplate>
 </ResourceDictionary>
