--- a/Registry/View/EditPersonDataUserControl.xaml
+++ b/Registry/View/EditPersonDataUserControl.xaml
@@ -96,7 +96,7 @@
 
         <TextBlock x:Name="tblInsurance"  Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Страховые документы</TextBlock>
         <TextBox x:Name="tbInsurance"  Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" Height="72" HorizontalAlignment="Stretch" Text="{Binding Insurance}" 
-                 IsReadOnly="True" MouseUp="{mvvm:EventBinding EditInsuranceCommand}" />
+                 IsReadOnly="True" MouseDoubleClick="{mvvm:EventBinding EditInsuranceCommand}" />
 
         <Label Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Адрес</Label>
         <TextBox Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" IsReadOnly="True" Height="72"  Text="{Binding Addresses}"/>
